@@ -16,6 +16,9 @@
     </description>
 
     <properties>
+    	<!-- TODO W-13145677 Make the add-opens specific to 'org.mule.test.unit' instead of ALL-UNNAMED --> 
+        <surefire.args>${surefire.args.base} --add-opens java.base/java.lang=ALL-UNNAMED</surefire.args>
+
         <javaModuleName>org.mule.runtime.extensions.spring.support</javaModuleName>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
         <jsoup.version>1.15.3</jsoup.version>
